remove phone number

--- a/resume.tex
+++ b/resume.tex
@@ -132,7 +132,7 @@
     {
     \huge \scshape Eugin Pahk} \\ \vspace{4pt}
     \small
-    \raisebox{-0.1\height}\faPhone\ (719)-888-111 ~
+    % \raisebox{-0.1\height}\faPhone\ (719)-888-111 ~
     \href{mailto:eugin03@gmail.com}{\faEnvelope\ eugin03@gmail.com} ~ \\
     \vspace{2pt}
     \href{https://linkedin.com/in/epahk}{\faLinkedin\ https://linkedin.com/in/epahk}  ~
