added EVSE project in comments

--- a/resume.tex
+++ b/resume.tex
@@ -268,6 +268,15 @@
           \resumeItem{Web app to help students find campus events and to help organizers facilitate and advertise their meetings}
           \resumeItem{SolidJS frontend, Go backend, Postgres DB, hosted in AWS}
         \resumeItemListEnd
+      
+      % % EVSE
+      % \resumeProjectHeading
+      % {Electric Vehicle Supply Equipment Security}{Jan. 2023 -- May 2023}
+      %   \resumeItemListStart
+      %     \resumeItem{Security Research on Open Charge Point Protocol version 2.0}
+      %     \resumeItem{Concluded that less secure profiles are still open to replay attacks}
+      %   \resumeItemListEnd
+
     % \resumeProjectHeading
     %       {\textbf{Project Title} $|$ \emph{Tool1, Tool2, Tool3, Tool4 \href{https://github.com/}{Git}}}{Month -- Month Year}
     %       \resumeItemListStart
