moved c303 up, added phone number, added rende link

--- a/resume.tex
+++ b/resume.tex
@@ -132,8 +132,9 @@
     {
     \huge \scshape Eugin Pahk} \\ \vspace{4pt}
     \small
-    % \raisebox{-0.1\height}\faPhone\ (719)-888-111 ~
-    \href{mailto:eugin03@gmail.com}{\faEnvelope\ eugin03@gmail.com} ~ \\
+    \href{mailto:eugin03@gmail.com}{\faEnvelope\ eugin03@gmail.com} ~
+    % \raisebox{-0.1\height} 
+    \href{tel:7192713078}{\faPhone\ (719) 271-3078} ~ \\
     \vspace{2pt}
     \href{https://linkedin.com/in/epahk}{\faLinkedin\ https://linkedin.com/in/epahk}  ~
     \href{https://github.com/gosueep}{\faGithub\ https://github.com/gosueep}
@@ -173,6 +174,16 @@
 
 \section{Work Experience}   %-----------Work EXPERIENCE-----------
   \resumeSubHeadingListStart
+    % Cloud303
+    \resumeSubheading
+      {Cloud303}{Aug. 2022 -- Present}
+      {Cloud \& Software Engineering Intern}{Lakewood, CO}
+      \resumeItemListStart
+        \resumeItem{Built a full-stack web app utilizing computer vision to locate missing people in drone searches. React frontend, Python backend containerized for AWS Lambda}
+        % \resumeItem{Developing a CRM to re}
+        \resumeItem{Provided consulting to clients on security, efficiency, and cost of their AWS tech stacks}
+      \resumeItemListEnd
+
     % Chevron
     \resumeSubheading
       {Chevron}{May 2023 -- Aug. 2023}
@@ -182,17 +193,8 @@
           Developed C\# plugins, modeling 3D seismic data to optimize geoscientist workflows. 
           Contributed \$5M in business value, aiding drilling operations to prevent kicks and well losses}
         \resumeItem{Wrote C\# and Python scripts for data migration between Azure environments for Chevron New Energies}
-    \resumeItemListEnd
+      \resumeItemListEnd
       
-    % Cloud303
-    \resumeSubheading
-      {Cloud303}{Aug. 2022 -- May 2023}
-      {Cloud \& Software Engineering Intern}{Lakewood, CO}
-      \resumeItemListStart
-        \resumeItem{Built a full-stack web app utilizing computer vision to locate missing people in drone searches. React frontend, Python backend containerized for AWS Lambda}
-        \resumeItem{Provided consulting to clients on security, efficiency, and cost of their AWS tech stacks}
-        % \resumeItem{Wrote a metrics tool in Python in our CRM software Odoo}
-    \resumeItemListEnd
     
     % Northrop Grumman   
     \resumeSubheading
@@ -232,7 +234,7 @@
     % ACM
     \resumeSubheading
       {Association for Computing Machinery (ACM)}{Aug. 2021 -- Present}
-      {Vice Chair}{Golden, CO}
+      {Vice Chair, Student Advisor}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Led club \& officers, planned weekly meetings \& events, arranged tech talks with industry partners}
         \resumeItem{Organized a hackathon at University of North Carolina Chapel Hill with 16 members}
@@ -263,10 +265,10 @@
     \resumeSubHeadingListStart
       % Rende
       \resumeProjectHeading
-      {Rende}{Jan. 2023 -- Present}
+      {Rende $|$ \href{https://rende.fun}{https://rende.fun}}{Jan. 2023 -- Present}
         \resumeItemListStart
           \resumeItem{Web app to help students find campus events and to help organizers facilitate and advertise their meetings}
-          \resumeItem{SolidJS frontend, Go backend, Postgres DB, hosted in AWS}
+          \resumeItem{SolidJS frontend, Go backend, Postgres DB on Supabase, hosted on AWS}
         \resumeItemListEnd
       
       % % EVSE
