add evse and programming challenges

--- a/resume.tex
+++ b/resume.tex
@@ -162,16 +162,6 @@
       % \small{\textbf{Coursework: Course-1, Course-2, Course-3, Course-4}}
     \resumeSubHeadingListEnd
 
-\section{Skills and Certifications}   %-----------Technical Skills-----------
- \begin{itemize}[leftmargin=0.1in, label={}]
-    \small{\item{
-      \textbf{Active Secret Clearance}\\
-      \textbf{Skills/Languages}{: Python, Java, C++, JS, C\#, AWS} \\
-      \textbf{Frameworks \& Tools}{: NodeJS, React, SolidJS, Maven, Jenkins, SonarQube} \\
-      \textbf{Certifications}{: AWS Solutions Architect -- Associate, Security Pro, Network Pro, Linux Pro}\\
-    }}
- \end{itemize}
-
 \section{Work Experience}   %-----------Work EXPERIENCE-----------
   \resumeSubHeadingListStart
     % Cloud303
@@ -183,6 +173,14 @@
         % \resumeItem{Developing a CRM to re}
         \resumeItem{Provided consulting to clients on security, efficiency, and cost of their AWS tech stacks}
       \resumeItemListEnd
+    
+    % Programming Challenges
+    \resumeSubheading
+    {Colorado School of Mines}{Aug. 2022 -- Dec. 2022}
+    {Programming Challenges Teaching Assistant}{Golden, CO}
+    \resumeItemListStart
+      \resumeItem{Guided students through programming challenges and aided in debugging their code on topics such as dynamic programming, string processing, multithreading}
+    \resumeItemListEnd
 
     % Chevron
     \resumeSubheading
@@ -271,13 +269,13 @@
           \resumeItem{SolidJS frontend, Go backend, Postgres DB on Supabase, hosted on AWS}
         \resumeItemListEnd
       
-      % % EVSE
-      % \resumeProjectHeading
-      % {Electric Vehicle Supply Equipment Security}{Jan. 2023 -- May 2023}
-      %   \resumeItemListStart
-      %     \resumeItem{Security Research on Open Charge Point Protocol version 2.0}
-      %     \resumeItem{Concluded that less secure profiles are still open to replay attacks}
-      %   \resumeItemListEnd
+      % EVSE
+      \resumeProjectHeading
+      {Electric Vehicle Supply Equipment Security}{Jan. 2023 -- May 2023}
+        \resumeItemListStart
+          \resumeItem{Security Research on Open Charge Point Protocol version 2.0}
+          \resumeItem{Concluded that less secure profiles are still open to replay attacks}
+        \resumeItemListEnd
 
     % \resumeProjectHeading
     %       {\textbf{Project Title} $|$ \emph{Tool1, Tool2, Tool3, Tool4 \href{https://github.com/}{Git}}}{Month -- Month Year}
