--- a/resume.tex
+++ b/resume.tex
@@ -132,12 +132,12 @@
     {
     \huge \scshape Eugin Pahk} \\ \vspace{4pt}
     \small
-    \href{mailto:eugin03@gmail.com}{\faEnvelope\ eugin03@gmail.com} ~
+    \href{https://linkedin.com/in/epahk}{\faLinkedin\ epahk}  $|$
+    \href{mailto:eugin03@gmail.com}{\faEnvelope\ eugin03@gmail.com} $|$
     % \raisebox{-0.1\height} 
-    \href{tel:7192713078}{\faPhone\ (719) 271-3078} ~ \\
-    \vspace{2pt}
-    \href{https://linkedin.com/in/epahk}{\faLinkedin\ https://linkedin.com/in/epahk}  ~
-    \href{https://github.com/gosueep}{\faGithub\ https://github.com/gosueep}
+    \href{tel:7192713078}{\faPhone\ (719) 271-3078} $|$ 
+    % \vspace{2pt}
+    \href{https://github.com/gosueep}{\faGithub\ gosueep}
     \vspace{-5pt}
 \end{center}
 
@@ -149,8 +149,7 @@
       {Colorado School of Mines}{August 2021 -- December 2023}
       {Bachelor's of Science in Computer Science }{GPA: 4.0}
       \resumeItemListStart
-        \resumeItem{Colorado Scholars Fund Recipient -- full-tuition scholarship}
-        \resumeItem{Google CMAPP Scholar, PATHS CS Scholar, FIRST Scholar}
+        \resumeItem{Colorado Scholars Fund (full-tuition scholarship), Google C-MAPP Scholar, PATHS CS Scholar, FIRST Scholar}
         % \resumeItem{Clubs: ACM, Oresec, Competitive Programming}
       \resumeItemListEnd
       % \small{\textbf{Coursework: Course-1, Course-2, Course-3, Course-4}}
@@ -160,7 +159,7 @@
  \begin{itemize}[leftmargin=0.1in, label={}]
     \small{\item{
       \textbf{Active Secret Clearance}\\
-      \textbf{Skills/Languages}{: Python, Java, C++, JS, C\#, AWS} \\
+      \textbf{Skills/Languages}{: Python, Go, Java, C++, JS, C\#, AWS} \\
       \textbf{Frameworks \& Tools}{: NodeJS, React, SolidJS, Maven, Jenkins, SonarQube} \\
       \textbf{Certifications}{: AWS Solutions Architect -- Associate, Security Pro, Network Pro, Linux Pro}\\
     }}
@@ -173,8 +172,8 @@
       {Cloud303}{Aug. 2022 -- Present}
       {Cloud \& Software Engineering Intern}{Lakewood, CO}
       \resumeItemListStart
+        \resumeItem{Developing custom CRM software to organize AWS sales opportunities and projects for small companies}
         \resumeItem{Built a full-stack web app utilizing computer vision to locate missing people in drone searches. React frontend, Python backend containerized for AWS Lambda}
-        % \resumeItem{Developing a CRM to re}
         \resumeItem{Provided consulting to clients on security, efficiency, and cost of their AWS tech stacks}
       \resumeItemListEnd
 
@@ -202,10 +201,10 @@
     % Discrete Math
     \resumeSubheading
     {Colorado School of Mines}{Jan. 2022 -- May 2022}
-    {Discrete Math Teaching Assistant}{Golden, CO}
+    {Discrete Math (CSCI 358) Teaching Assistant}{Golden, CO}
     \resumeItemListStart
       \resumeItem{Taught fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
-      \resumeItem{Wrote homework assignments \& exams, graded, and held weekly office hours}
+      \resumeItem{Wrote homework assignments \& exams, graded, and held weekly office hours for 150 students across 3 sections}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -215,11 +214,12 @@
     % CCSP
     \resumeSubheading
       {Center for Cyber Security and Privacy}{Sept 2021 -- May 2022}
-      {Research Assistant, Co-Author}{Golden, CO}
+      {Research Assistant, 2nd Author (ACM CHI 2023)}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Developed website for a user study simulating privacy negotiations in smart homes}
         \resumeItem{Lead member on the negotiation algorithm; conducted statistical analysis using R and Python}
         \resumeItem{Published our paper in ACM CHI 2023 Conference, 2nd author}
+        \resumeItem{\href{https://doi.org/10.1145/3544548.3581360}{\textit{Exploring the Negotiation Behaviors of Owners and Bystanders over Data Practices of Smart Home Devices}}}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -231,7 +231,7 @@
       {Vice Chair, Student Advisor}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Led club \& officers, planned weekly meetings \& events, arranged tech talks with industry partners}
-        \resumeItem{Organized a hackathon at University of North Carolina Chapel Hill with 16 members}
+        \resumeItem{Organized travel to a hackathon at University of North Carolina Chapel Hill for 16 local chapter members}
         \resumeItem{Facilitated a mentorship program in collaboration with ACM-W to connect underclassmen with upperclassmen}
       \resumeItemListEnd
 
