edited cyber competitions - csaw, cyberforce

--- a/resume.tex
+++ b/resume.tex
@@ -241,7 +241,7 @@
       {Secretary}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Coordinated tech talks from alumni and industry professionals}
-        \resumeItem{Competed in CTFs, blue-team defense competitions; 3rd at RMCCDC regionals}
+        \resumeItem{Competed in CTFs, blue-team defense competitions; 3rd at Rocky Mountain Collegiate Cyber Defense Competition (RMCCDC), 8th at DoE CyberForce, 5th place finalist at NYU's Embedded Security Challenge}
       \resumeItemListEnd
 
     % % CPM
