update dates and graduation

--- a/resume.tex
+++ b/resume.tex
@@ -149,7 +149,7 @@
       {Colorado School of Mines}{August 2021 -- December 2023}
       {Bachelor's of Science in Computer Science }{GPA: 4.0}
       \resumeItemListStart
-        \resumeItem{Colorado Scholars Fund (full-tuition scholarship), Google C-MAPP Scholar, PATHS CS Scholar, FIRST Scholar}
+        \resumeItem{Colorado Scholars Fund, Google C-MAPP Scholar, PATHS CS Scholar, Outstanding Graduating Senior}
         % \resumeItem{Clubs: ACM, Oresec, Competitive Programming}
       \resumeItemListEnd
       % \small{\textbf{Coursework: Course-1, Course-2, Course-3, Course-4}}
@@ -170,9 +170,9 @@
     % Cloud303
     \resumeSubheading
       {Cloud303}{Aug. 2022 -- Present}
-      {Cloud \& Software Engineering Intern}{Lakewood, CO}
+      {Cloud \& Software Engineer}{Lakewood, CO}
       \resumeItemListStart
-        \resumeItem{Developing custom CRM software to organize AWS sales opportunities and projects for small companies}
+        \resumeItem{Developing infrastructure automation to quickly deploy cloud resources for non-technical clients \& users }
         \resumeItem{Built a full-stack web app utilizing computer vision to locate missing people in drone searches. React frontend, Python backend containerized for AWS Lambda}
         \resumeItem{Provided consulting to clients on security, efficiency, and cost of their AWS tech stacks}
       \resumeItemListEnd
@@ -227,7 +227,7 @@
   \resumeSubHeadingListStart
     % ACM
     \resumeSubheading
-      {Association for Computing Machinery (ACM)}{Aug. 2021 -- Present}
+      {Association for Computing Machinery (ACM)}{Aug. 2021 -- Dec 2023}
       {Vice Chair, Student Advisor}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Led club \& officers, planned weekly meetings \& events, arranged tech talks with industry partners}
@@ -237,7 +237,7 @@
 
     % Oresec
     \resumeSubheading
-      {Mines Cybersecurity Club (Oresec) }{Aug. 2021 -- Present}
+      {Mines Cybersecurity Club (Oresec) }{Aug. 2021 -- Dec. 2023}
       {Secretary}{Golden, CO}
       \resumeItemListStart
         \resumeItem{Coordinated tech talks from alumni and industry professionals}
@@ -259,7 +259,7 @@
     \resumeSubHeadingListStart
       % Rende
       \resumeProjectHeading
-      {Rende $|$ \href{https://rende.fun}{https://rende.fun}}{Jan. 2023 -- Present}
+      {Rende}{Jan. 2023 -- Aug 2023}
         \resumeItemListStart
           \resumeItem{Web app to help students find campus events and to help organizers facilitate and advertise their meetings}
           \resumeItem{SolidJS frontend, Go backend, Postgres DB on Supabase, hosted on AWS}
