update TA positions into brief sections

--- a/resume.tex
+++ b/resume.tex
@@ -198,14 +198,32 @@
         \resumeItem{Utilized Maven and Jenkins, to create SonarQube jobs for code analysis for 8 repositories}
     \resumeItemListEnd
 
-    % Discrete Math
+    % Teaching Assistant positions
     \resumeSubheading
-    {Colorado School of Mines}{Jan. 2022 -- May 2022}
-    {Discrete Math (CSCI 358) Teaching Assistant}{Golden, CO}
+    {Colorado School of Mines}{Jan. 2022 -- May 2024}
+    {Teaching Assistant}{Golden, CO}
     \resumeItemListStart
-      \resumeItem{Taught fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
-      \resumeItem{Wrote homework assignments \& exams, graded, and held weekly office hours for 150 students across 3 sections}
+      \resumeItem{Discrete Math - fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
+      \resumeItem{Programming Challenges - technical interview topics such as dynamic programming, string processing, multithreading}
+      \resumeItem{Intro to Cryptography - basic cryptography concepts ranging from encryption to computational number theory}
     \resumeItemListEnd
+
+    % % Discrete Math
+    % \resumeSubheading
+    % {Colorado School of Mines}{Jan. 2022 -- May 2022}
+    % {Discrete Math (CSCI 358) Teaching Assistant}{Golden, CO}
+    % \resumeItemListStart
+    %   \resumeItem{Taught fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
+    %   \resumeItem{Wrote homework assignments \& exams, graded, and held weekly office hours for 150 students across 3 sections}
+    % \resumeItemListEnd
+
+    % % Programming Challenges
+    % \resumeSubheading
+    % {Colorado School of Mines}{Aug. 2022 -- Dec. 2022}
+    % {Programming Challenges Teaching Assistant}{Golden, CO}
+    % \resumeItemListStart
+    %   \resumeItem{Guided students through programming challenges and aided in debugging their code on topics such as dynamic programming, string processing, multithreading}
+    % \resumeItemListEnd
     
   \resumeSubHeadingListEnd
 
