--- a/resume.tex
+++ b/resume.tex
@@ -158,18 +158,26 @@
 \section{Skills and Certifications}   %-----------Technical Skills-----------
  \begin{itemize}[leftmargin=0.1in, label={}]
     \small{\item{
-      \textbf{Active Secret Clearance}\\
-      \textbf{Skills/Languages}{: Python, Go, Java, C++, JS, C\#, AWS} \\
-      \textbf{Frameworks \& Tools}{: NodeJS, React, SolidJS, Maven, Jenkins, SonarQube} \\
-      \textbf{Certifications}{: AWS Solutions Architect -- Associate, Security Pro, Network Pro, Linux Pro}\\
+      \textbf{Active Secret Clearance ; Certifications} - AWS Solutions Architect -- Associate, Security Pro, Network Pro \\
+      \textbf{Skills/Tools}{: Python, Go, Java, C++, JS, C\#, AWS, NodeJS, React, Maven, Jenkins, SonarQube} \\
+      % \textbf{Frameworks \& Tools}{: NodeJS, React, SolidJS, Maven, Jenkins, SonarQube} \\
+      % \textbf{Certifications}{: AWS Solutions Architect -- Associate, Security Pro, Network Pro, Linux Pro}\\
     }}
  \end{itemize}
 
 \section{Work Experience}   %-----------Work EXPERIENCE-----------
   \resumeSubHeadingListStart
+    % Spectrum
+    \resumeSubheading
+      {Spectrum}{Aug. 2024 -- Present}
+      {Software Engineer III}{Denver, CO}
+      \resumeItemListStart
+        \resumeItem{Developing a modernized  JUnit test framework for PINXT, the central gateway for all of Spectrum's traffic}
+      \resumeItemListEnd
+
     % Cloud303
     \resumeSubheading
-      {Cloud303}{Aug. 2022 -- Present}
+      {Cloud303}{Aug. 2022 -- Aug. 2024}
       {Cloud \& Software Engineer}{Lakewood, CO}
       \resumeItemListStart
         \resumeItem{Developing infrastructure automation to quickly deploy cloud resources for non-technical clients \& users }
@@ -200,12 +208,13 @@
 
     % Teaching Assistant positions
     \resumeSubheading
-    {Colorado School of Mines}{Jan. 2022 -- May 2024}
+    {Colorado School of Mines}{Jan. 2022 -- May 2025}
     {Teaching Assistant}{Golden, CO}
     \resumeItemListStart
-      \resumeItem{Discrete Math - fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
-      \resumeItem{Programming Challenges - technical interview topics such as dynamic programming, string processing, multithreading}
-      \resumeItem{Intro to Cryptography - basic cryptography concepts ranging from encryption to computational number theory}
+      \resumeItem{Graduate Information Security, Intro to Cryptography, Programming Challenges, Discrete Math}
+      % \resumeItem{Discrete Math - fundamentals of computer science including logic, sets, proofs, combinatorics, and recursion}
+      % \resumeItem{Programming Challenges - technical interview topics such as dynamic programming, string processing, multithreading}
+      % \resumeItem{Intro to Cryptography - basic cryptography concepts ranging from encryption to computational number theory}
     \resumeItemListEnd
 
     % % Discrete Math
